public/styles/index.css
html,
body {
  height: 100%;
}

body {
  display: grid;
  grid-template-rows: 1fr;
  background-color: #34383b;
  overflow: hidden;
}

:root {
  font-family: "Raleway";
  font-size: clamp(16px, 4vw, 24px);
}

.content {
  overflow-y: scroll;
}

.content:before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  z-index: -1;

  background-image: url("../images/background-image.jpg");
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;

  mix-blend-mode: normal;
  opacity: 0.2;
  filter: blur(4.5px);
}

.container {
  height: 100%;
}

.login-signup {
  display: flex;
  justify-content: flex-end;
  gap: min(1.5em, 2vw);
  margin: min(2em, 4vw);
}

.login {
  color: white;
  font-style: italic;
  border-style: none;
  background-color: #6184d8;
  border-radius: 55px;
  padding: max(4px, 0.75vw) max(8px, 1.5vw);
  cursor: pointer;
  font-size: clamp(20px, 4vw, 32px);
  transition: 0.1s;
}

.login:hover {
  background-color: #819ad4;
}

.auth-container {
  background-color: white;
  border-radius: 15px;
  padding: 0.5em 2.5em;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.auth-container img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: max(9vw, 3em);
  width: 50%;
}

.main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.content .logo {
  max-width: max(12.5em, 25vw);
  margin-bottom: 2em;
}

.content p {
  font-family: "Raleway";
  font-style: italic;
  font-weight: 400;
  color: #ffff;
  font-size: min(1.59375rem, 3.75vw);
  margin-bottom: 3em;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.search-container {
  max-width: min-content;
  border-radius: 15px;
  overflow: hidden;
}

input[type="search"] {
  background-color: #f5f5f5;
  width: max(37.5vw, 15em);
  border: none;
  margin: 0;
  padding: 10px 10px 10px 50px;
  font-family: "Raleway";
  font-size: 1rem;
  color: inherit;
  border: 1px solid transparent;
  background-image: url(../images/magnify.svg);
  background-repeat: no-repeat;
  background-size: 30px;
  background-position: 10px center;
}

input[type="search"]::placeholder {
  font-style: italic;
}

input[type="search"]:focus {
  outline: none;
}

ul {
  background-color: #f5f5f5;
  border-radius: 0px 0px 10px 10px;
  font-family: "Raleway";
  overflow: hidden;
}

ul img {
  max-height: 23px;
  margin-right: 10px;
}

ul li:hover {
  background-color: darkgray;
}

ul a {
  color: inherit;
  text-decoration: none;
  font-size: 0.9rem;
  padding: 15px;
  display: flex;
  align-items: center;
  cursor: default;
}

